# PRiDe

./: CMakeLists.txt  README
docs/: Notes
src/: BDB.c  BDB.h  CMakeLists.txt  Config.h  ConflictResolution.c  ConflictResolution.h  ConflictSet.c  ConflictSet.h  DBoid.c  DBoid.h  Debug.h  EventQueue.c  EventQueue.h  Generation.c  Generation.h  MethodCallObject.c  MethodCallObject.h  Network.c  Network.h  Object.c  Object.h  ObjectStore.c  ObjectStore.h  OptimisticDb.c  OptimisticDb.h  Package.h  Parameter.h  Propagate.c  Propagate.h  Receiver.c  Receiver.h  Replica.c  Replica.h  Stabilization.c  Stabilization.h  Timer.c  Timer.h  Transaction.c  Transaction.h  TransactionLock.h  (+3 more)
utils/: run.sh
